--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "build": "nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
         "start": "cross-env NODE_ENV=prod nest start",
-        "start:dev": "cross-env NODE_ENV=dev nest start --watch",
+        "start:sem:dev": "cross-env NODE_ENV=sem.dev nest start --watch",
+        "start:sen:dev": "cross-env NODE_ENV=sen.dev nest start --watch",
         "start:debug": "cross-env NODE_ENV=dev nest start --debug --watch",
         "start:prod": "cross-env NODE_ENV=prod node dist/main",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
